protobuf/protoeditor-core/testData/lang/annotation/StringErrors.pb
unterminated_string: <EOLError descr="Unterminated string literal">"123</EOLError>
illegal_escape: "12<error descr="Illegal escape sequence in string literal">\z</error>3"
